package xyz.srgnis.csvplatformer.config;

public class Config {
    public static final float INIT_PLATFORM_DEEP = 10f;//10
    public static final float INIT_PLATFORM_Y = 100f;//100
    public static final float CELL_DIM_X = 10f;//10
    public static final float CELL_DIM_Z = 10f;//10
    public static final float MOV_SPEED = 20f;//20
    public static final float JUMP_SPEED = 20f;//20
    public static final float JUMP_TIME = 0.30f;//0.25
    public static final float GRAVITY = 60f;//60
    public static final int RAND_LEVEL_WIDTH = 5;//5
    public static final int RAND_LEVEL_LENGTH = 30;//30
    public static final float RESTART_PLANE_HEIGHT = -10f;//-10
}
